changed default example plugin to idlescape placeholder

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=idle-scape
+author=Ro
+description=idle-scape, play an idle game within a game while idling!
+tags=idle,scape,game,clicker,panel
+plugins=com.idlescape.idlescapePlugin
